<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stopwatch"
            android:icon="@drawable/ic_timer_black_48dp"
            android:title="@string/drawer_timer" />
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_timer_10_black_48dp"
            android:title="@string/drawer_cdtimer" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/drawer_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/drawer_about" />
    </group>

    <item android:title="@string/drawer_communication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_48dp"
                android:title="@string/drawer_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_mail_outline_black_48dp"
                android:title="@string/drawer_send" />
            <item
                android:id="@+id/nav_apps"
                android:icon="@drawable/ic_apps_black_48dp"
                android:title="@string/drawer_apps" />
        </menu>
    </item>

</menu>
