<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="330dp"
    android:layout_gravity="center"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="10dp"
    android:elevation="4dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="5dp">

    <ImageView
        android:id="@+id/card_menu_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_more_vert_black_24dp"
        android:contentDescription="@string/card_menu"/>

    <TextView
        android:id="@+id/name_timer_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/card_note"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/digital_clock_card_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        android:clickable="true"
        android:text="@string/timer_start_value"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:textSize="40sp" />

    <com.rusdelphi.timer.TimePicker
        android:id="@+id/timePicker"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/start_button_card_timer"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_start"
            android:minWidth="48dip"
            android:text="@string/start"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/reset_button_card_timer"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_reset"
            android:minWidth="28dp"
            android:text="@string/reset"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white" />
    </LinearLayout>
</android.support.v7.widget.CardView>

