<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/WidgetRoot"
    style="@android:style/Widget"
    android:layout_width="160dp"
    android:background="@android:color/white"
    android:focusable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_height="140dp">

    <TextView
        android:id="@+id/name_stopwatch_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="13dp"
        android:text="Запись 1"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_digital_clock_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:text="@string/timer_start_value"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_color"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/start_button_widget"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_start"
            android:minWidth="48dip"
            android:text="@string/start"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/reset_button_widget"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_reset"
            android:minWidth="28dp"
            android:text="@string/reset"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>